PROJECT(fdbus-sample)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ADD_DEFINITIONS(-std=c++11)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
INCLUDE_DIRECTORIES("~/workspace/install/include" "~/workspace/install/usr/include")
LINK_DIRECTORIES("~/workspace/install/lib" "~/workspace/install/usr/lib")
ADD_EXECUTABLE(job_test job_test.cpp)
TARGET_LINK_LIBRARIES(job_test common_base)
ADD_EXECUTABLE(fdb_test_server fdb_test_server.cpp)
TARGET_LINK_LIBRARIES(fdb_test_server common_base)
ADD_EXECUTABLE(fdb_test_client fdb_test_client.cpp)
TARGET_LINK_LIBRARIES(fdb_test_client common_base)